<resources>
    <string name="app_name">POC - PUC Café</string>
    <string name="msg_boas_vindas">Boas vindas à PUC Café.</string>
    <string name="msg_informe_seu_nome">Por favor, infome seu nome para continuar a compra.</string>

    <string name="lbl_valor_unitario">Valor unitário:</string>
    <string name="lbl_continuar">Continuar</string>
    <string name="lbl_seu_nome">Seu nome</string>
    <string name="lbl_resumo_pedido">Resumo do pedido</string>
    <string name="lbl_concluir">Concluir</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_selecionar_item_produto">Olá <b>%1$s</b>, selecione o pedido</string>

    <style name="lbl_quantidade">Quantidade:</style>

    <string name="erro_nome">O campo nome deve ser informado para avançar.</string>
    <string name="lbl_quantidade">Quantidade desejada</string>
    <string name="lbl_valor_unitario_place_holder">Valor Unitário %1$s</string>
    <string name="lbl_valor_total_place_holder">Valor Total: %1$s</string>
    <string name="lbl_quantidade_holder">Quantidade: %1$s</string>
    <string name="lbl_valeu">Valeu %1$s!</string>
    <string name="zero">0</string>
    <string name="logologo">Logo logo seu produto será entregue.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reduzir_quantidade">Reduzir quantidade</string>
    <string name="aumentar_quantidade">Aumentar quantidade</string>
</resources>