<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margem_padrao"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/textViewBoasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_boas_vindas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/msg_informe_seu_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBoasVindas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonContinuarNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBoasVindas">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeCliente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lbl_seu_nome"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonContinuarNome"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/lbl_continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>