<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created/Adapted by fabricio on 25/02/2023 19:36
  ~ Last modified 25/02/2023 19:36
  ~
  ~ Copyright (C) 2023 Professor Fabricio Valadares - PUC Minas Virtual
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  ~ See the License for the specific language governing permissions and limitations under the License.
  ~
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margem_padrao_media"
    app:cardCornerRadius="@dimen/raio_padrao">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewLblProduto"
            android:layout_width="0dp"
            android:layout_height="@dimen/altura_padrao"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/textViewValorUnitario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Mokkiato" />

        <TextView
            android:id="@+id/textViewValorUnitario"
            android:layout_width="0dp"
            android:layout_height="@dimen/altura_padrao"
            android:gravity="center"
            android:text="@string/lbl_valor_unitario"
            app:layout_constraintBottom_toTopOf="@id/editTextQuantidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLblProduto"
            tools:text="R$ 15.00" />

        <ImageButton
            android:id="@+id/buttonReduzirQtd"
            android:layout_width="@dimen/altura_padrao"
            android:layout_height="@dimen/altura_padrao"
            android:layout_marginStart="80dp"
            android:src="@drawable/baseline_exposure_neg_1_24"
            app:layout_constraintBottom_toBottomOf="@id/editTextQuantidade"
            app:layout_constraintEnd_toStartOf="@id/editTextQuantidade"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/reduzir_quantidade" />

        <TextView
            android:id="@+id/editTextQuantidade"
            android:layout_width="0dp"
            android:layout_height="@dimen/altura_padrao"
            android:layout_marginBottom="@dimen/margem_padrao_media"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonAumentarQtd"
            app:layout_constraintStart_toEndOf="@id/buttonReduzirQtd"
            app:layout_constraintTop_toBottomOf="@id/textViewValorUnitario"
            tools:text="1" />

        <ImageButton
            android:id="@+id/buttonAumentarQtd"
            android:layout_width="@dimen/altura_padrao"
            android:layout_height="@dimen/altura_padrao"
            android:layout_marginEnd="80dp"
            android:src="@drawable/baseline_exposure_plus_1_24"
            app:layout_constraintBottom_toBottomOf="@id/editTextQuantidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextQuantidade"
            android:contentDescription="@string/aumentar_quantidade" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>