<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margem_padrao"
    tools:context=".ui.resumo.ResumoFragment">

    <TextView
        android:id="@+id/textViewResumo"
        android:layout_width="0dp"
        android:layout_height="@dimen/altura_padrao"
        android:gravity="center"
        android:text="@string/lbl_resumo_pedido"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cardViewTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResumo"
        tools:listitem="@layout/list_item_produto" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTotal"
        android:layout_width="0dp"
        android:layout_height="@dimen/altura_padrao"
        android:layout_margin="@dimen/margem_padrao"
        app:layout_constraintBottom_toTopOf="@id/buttonConcluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTotal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTotalLbl"
                android:layout_width="0dp"
                android:layout_height="@dimen/altura_padrao"
                android:gravity="end|center_vertical"
                android:text="@string/lbl_total"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textViewValorUnitario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewValorUnitario"
                android:layout_width="60dp"
                android:layout_height="@dimen/altura_padrao"
                android:gravity="start|center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewTotalLbl"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="15,00" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/buttonConcluir"
        android:layout_width="0dp"
        android:layout_height="@dimen/altura_padrao"
        android:text="@string/lbl_concluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>